--- a/app_default/templates/recifigital/aguardando_aprovacao.html
+++ b/app_default/templates/recifigital/aguardando_aprovacao.html
@@ -1,4 +1,4 @@
-{% extends 'mlp.recifigital/base.html' %}
+{% extends 'recifigital/base.html' %}
 
 {% block conteudo %}
 <div class="form-container">
