--- a/app_default/templates/recifigital/registrar.html
+++ b/app_default/templates/recifigital/registrar.html
@@ -1,4 +1,4 @@
-{% extends 'mlp.recifigital/base.html' %}
+{% extends 'recifigital/base.html' %}
 {% block conteudo %}
     <form action="{% url 'registrar' %}" method="post">
         {% csrf_token %}
