--- a/app_default/templates/recifigital/usuarios.html
+++ b/app_default/templates/recifigital/usuarios.html
@@ -1,4 +1,4 @@
-{% extends 'mlp.recifigital/base.html' %}
+{% extends 'recifigital/base.html' %}
 {% block conteudo %}
 <style>
     .usuarios-container {
