--- a/app_default/templates/recifigital/aguardando_aprovacao.html
+++ b/app_default/templates/recifigital/aguardando_aprovacao.html
@@ -1,5 +1,5 @@
 {% extends 'recifigital/base.html' %}
-
+{% load static %}
 {% block conteudo %}
 <div class="form-container">
     <h2>Sua conta foi criada!</h2>
