--- a/app_default/templates/recifigital/home.html
+++ b/app_default/templates/recifigital/home.html
@@ -1,6 +1,7 @@
 {% extends 'recifigital/base.html' %}
+{% load static %}
 {% block conteudo %}
 
-
+<img src="{% static 'img/logo/lettering_white.png' %}" alt="Logo">
 
 {% endblock %}
