--- a/app_default/templates/recifigital/registrar.html
+++ b/app_default/templates/recifigital/registrar.html
@@ -1,4 +1,5 @@
 {% extends 'recifigital/base.html' %}
+{% load static %}
 {% block conteudo %}
     <form action="{% url 'registrar' %}" method="post">
         {% csrf_token %}
