--- a/app_default/templates/403.html
+++ b/app_default/templates/403.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block conteudo %}
 <div class="erro-container">
-    <h1>Página não encontrada.</h1>
-    <p>Parece que a página que você procura não existe. Verifique o endereço digitado.</p>
+    <h1>Conteúdo Protegido!</h1>
+    <p>Você não tem permissão para acessar esta página. O conteúdo que você está tentando visualizar é protegido. :( </p>
     <button onclick="window.location.href='/'">IR PARA PÁGINA INICIAL</button>
 </div>
 {% endblock %}
