--- a/app_default/templates/403.html
+++ b/app_default/templates/403.html
@@ -3,7 +3,8 @@
 {% block conteudo %}
 <div class="erro-container">
     <h1>Conteúdo Protegido!</h1>
-    <p>Você não tem permissão para acessar esta página. O conteúdo que você está tentando visualizar é protegido. :( </p>
+    <p>O conteúdo que você está tentando visualizar é protegido, tente voltar para a página inicial ou entre na sua conta. </p>
     <button onclick="window.location.href='/'">IR PARA PÁGINA INICIAL</button>
+    <button onclick="window.location.href='/'">FAZER LOGIN</button>
 </div>
 {% endblock %}
