--- a/app_default/templates/recifigital/base.html
+++ b/app_default/templates/recifigital/base.html
@@ -123,6 +123,7 @@
         background-color: #000;
         color: white;
         border: none;
+        margin-bottom: 5px;
         padding: 15px 30px;
         border-radius: 4px;
         cursor: pointer;
