--- a/app_default/templates/403.html
+++ b/app_default/templates/403.html
@@ -5,6 +5,6 @@
     <h1>Conteúdo Protegido!</h1>
     <p>O conteúdo que você está tentando visualizar é protegido, tente voltar para a página inicial ou entre na sua conta. </p>
     <button onclick="window.location.href='/'">IR PARA PÁGINA INICIAL</button>
-    <button onclick="window.location.href='/'">FAZER LOGIN</button>
+    <button onclick="window.location.href='/login'">FAZER LOGIN</button>
 </div>
 {% endblock %}
