--- a/app_default/templates/recifigital/base.html
+++ b/app_default/templates/recifigital/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="<?php bloginfo('charset'); ?>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         * {
             box-sizing: border-box;
